tests/sksl/errors/ReservedNameDouble.glsl
### Compilation failed:

error: 1: 'double' is a reserved word
1 error
